# tourney

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: build-pub-manylinux.yml  docs.yml
docs/source/: conf.py  index.rst
tourney/: competition.py  event.py  league.py  person.py  scoring.py  season.py  team.py  tournament.py  utils.py
tourney/tests/: test_objects.py
